# mmsbvi

./: .gitignore  README.md  README_CN.md  README_setup.md  environment.yml  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  setup_environment.py
automation/: run_complete_validation_suite.sh  run_geometric_limits_workflow.sh  run_parameter_sensitivity_workflow.sh  run_rts_equivalence_workflow.sh
benchmark_results/: benchmark_log_20250721_224213.txt  benchmark_results_20250721_224213.json
results/: geometric_limits_validation_detailed_data.xlsx  parameter_sensitivity_analysis_detailed_data.xlsx  pendulum_comparison_results.csv  rts_equivalence_marginal_driven_detailed_data.xlsx  rts_equivalence_observation_driven_detailed_data.xlsx  two_marginal_gaussian_data.xlsx
results/geometric_limits/: geometric_limits_validation_detailed_data.xlsx  ultra_rigorous_geometric_validation_results.pkl
results/parameter_sensitivity/: ultra_rigorous_parameter_sensitivity_results.pkl
src/baselines/: __init__.py
tests/: simple_rts_test.py  test_control_grad.py  test_extreme_stress.py  test_forward_backward.py  test_gpssm_refactor.py  test_integrators.py  test_log_marginal.py  test_mathematical_validation.py  test_multimarginal.py  test_numerical_stability.py  test_ou_linear_mapping.py  test_performance_benchmark.py  test_performance_compare.py  test_rts_obs_equivalence.py  test_rts_ssm_equivalence.py  test_svi_implementation.py  test_ukf.py
theoretical_verification/: README.md
visualization/: geometric_limits_visualization.py  parameter_sensitivity_visualization.py  pendulum_method_comparison_dashboard.py  pendulum_publication_plots.py  rts_equivalence_visualization.py
(+60 files in other folders)
